--- a/src/pages/Nutrition.css
+++ b/src/pages/Nutrition.css
@@ -156,7 +156,7 @@
 
 .meal {
   margin: 16px 0;
-  padding: 16px;
+  padding: 8px;
   background-color: #161616;
   border-radius: 16px;
 }
@@ -181,12 +181,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 8px;
   padding: 8px;
 }
 
-.meal__info {
-  max-width: 85%;
-}
+.meal__info {}
 
 .meal__name {
   white-space: nowrap;
